--- a/Scrapy/my_spyder/scrapy.cfg
+++ b/Scrapy/my_spyder/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = test_spyder.settings
+default = my_spyder.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = test_spyder
+project = my_spyder
